--- a/templates/app_admin/dashboard.html
+++ b/templates/app_admin/dashboard.html
@@ -39,6 +39,9 @@
             <a href="{{ url_for('app_admin.list_app_admins') }}" class="px-4 py-2 bg-gray-600 text-white rounded hover:bg-gray-700">
                 Manage Admins
             </a>
+            <a href="{{ url_for('app_admin.system_updates') }}" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+                System Updates
+            </a>
         </div>
     </div>
 
